fixed addon price jump @focus

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,7 +208,7 @@ containers
   /****************
     Buttons
   ****************/
-
+  
 .btn {
     display: inline-block;
     padding: 0px 5px;
@@ -266,25 +266,36 @@ containers
 
 
 .tab-container{
+    position: relative;
     display: flex;
     align-items: center;
-    gap: 10px; /* Adds space between elements */
-    justify-content: space-between; 
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid black;
 }
 .tab-row{
+    position: relative;
     display: flex;
     align-items: center;
-    gap: 10px;
-     width: 100%;
 }
 .tab-name{
     display: flex;
-  align-items: center;
+    align-items: center;
+    box-sizing: border-box;
+     border: 1px solid green;
 }
-.tab-name input{}
+.tab-name input{
+    box-sizing: border-box;
+     border: 1px solid blue;
+}
 .tab-price{
+    position: relative;
     margin-left: auto;
+    margin-right: 10px;
+    text-align: right;
     width: 75px;
+    box-sizing: border-box;
+    border: 1px solid purple;
 }
 .option-value{
     display: flex;
